CRUD and tests (#6)
