# src/main/java/io/github/onecx/ai/rs/internal/controllers/KnowlegeBaseRestController.java
@@ -2,8 +2,6 @@ package io.github.onecx.ai.rs.internal.controllers;
 
 import static jakarta.transaction.Transactional.TxType.NOT_SUPPORTED;
 
-import java.util.List;
-
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
@@ -19,24 +17,11 @@ import org.jboss.resteasy.reactive.server.ServerExceptionMapper;
 import org.tkit.quarkus.jpa.exceptions.ConstraintException;
 
 import gen.io.github.onecx.ai.rs.internal.AiKnowledgeBaseInternalApi;
-import gen.io.github.onecx.ai.rs.internal.model.AIContextSearchCriteriaDTO;
 import gen.io.github.onecx.ai.rs.internal.model.AIKnowledgeBaseSearchCriteriaDTO;
-import gen.io.github.onecx.ai.rs.internal.model.AIKnowledgeDocumentDTO;
 import gen.io.github.onecx.ai.rs.internal.model.AIProviderDTO;
-import gen.io.github.onecx.ai.rs.internal.model.CreateAIContextRequestDTO;
 import gen.io.github.onecx.ai.rs.internal.model.CreateAIKnowledgeBaseRequestDTO;
-import gen.io.github.onecx.ai.rs.internal.model.CreateAIKnowledgeDatabaseRequestDTO;
-import gen.io.github.onecx.ai.rs.internal.model.CreateAIKnowledgeDocumentRequestDTO;
-import gen.io.github.onecx.ai.rs.internal.model.CreateAIKnowledgeUrlRequestDTO;
-import gen.io.github.onecx.ai.rs.internal.model.CreateAIKnowledgeVectorDbRequestDTO;
 import gen.io.github.onecx.ai.rs.internal.model.ProblemDetailResponseDTO;
-import gen.io.github.onecx.ai.rs.internal.model.UpdateAIContextRequestDTO;
 import gen.io.github.onecx.ai.rs.internal.model.UpdateAIKnowledgeBaseRequestDTO;
-import gen.io.github.onecx.ai.rs.internal.model.UpdateAIKnowledgeDatabaseRequestDTO;
-import gen.io.github.onecx.ai.rs.internal.model.UpdateAIKnowledgeDocumentRequestDTO;
-import gen.io.github.onecx.ai.rs.internal.model.UpdateAIKnowledgeUrlRequestDTO;
-import gen.io.github.onecx.ai.rs.internal.model.UpdateAIKnowledgeVectorDbRequestDTO;
-import gen.io.github.onecx.ai.rs.internal.model.UploadKnowledgeDocumentsRequestDTO;
 import io.github.onecx.ai.domain.daos.AIKnowledgeBaseDAO;
 import io.github.onecx.ai.rs.internal.mappers.ExceptionMapper;
 import io.github.onecx.ai.rs.internal.mappers.KnowledgeBaseMapper;
@@ -80,12 +65,6 @@ public class KnowlegeBaseRestController implements AiKnowledgeBaseInternalApi {
     }
 
     @Override
-    public Response createAIContext(String aiKnowledgebaseId, CreateAIContextRequestDTO aiContextDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'createAIContext'");
-    }
-
-    @Override
     public Response createAIKnowledgeBase(CreateAIKnowledgeBaseRequestDTO aiKnowledgeBaseDTO) {
 
         var kb = mapper.createAIKnowledgeBase(aiKnowledgeBaseDTO);
@@ -107,87 +86,17 @@ public class KnowlegeBaseRestController implements AiKnowledgeBaseInternalApi {
     }
 
     @Override
-    public Response createKnowledgeDb(String aiContextId,
-            CreateAIKnowledgeDatabaseRequestDTO aiKnowledgeDatabaseDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'createKnowledgeDb'");
-    }
-
-    @Override
-    public Response createKnowledgeDocument(String aiContextId,
-            CreateAIKnowledgeDocumentRequestDTO aiKnowledgeDocumentDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'createKnowledgeDocument'");
-    }
-
-    @Override
-    public Response createKnowledgeUrl(String aiContextId, CreateAIKnowledgeUrlRequestDTO aiKnowledgeUrlDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'createKnowledgeUrl'");
-    }
-
-    @Override
-    public Response createKnowledgeVectorDb(String aiContextId,
-            CreateAIKnowledgeVectorDbRequestDTO aiKnowledgeVectorDbDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'createKnowledgeVectorDb'");
-    }
-
-    @Override
-    public Response deleteAIContext(String aiContextId) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'deleteAIContext'");
-    }
-
-    @Override
     public Response deleteAIKnowledgeBase(String aiKnowledgebaseId) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'deleteAIKnowledgeBase'");
-    }
-
-    @Override
-    public Response deleteKnowledgeDb(String aiKnowledgeDatabaseId) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'deleteKnowledgeDb'");
-    }
-
-    @Override
-    public Response deleteKnowledgeDocument(String aiKnowledgeDocumentId) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'deleteKnowledgeDocument'");
-    }
-
-    @Override
-    public Response deleteKnowledgeUrl(String aiKnowledgeUrlId) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'deleteKnowledgeUrl'");
-    }
-
-    @Override
-    public Response deleteKnowledgeVectorDb(String aiKnowledgeVdbId) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'deleteKnowledgeVectorDb'");
-    }
-
-    @Override
-    public Response embeddKnowledgeDocuments(String aiContextId,
-            @Valid @NotNull List<@Valid AIKnowledgeDocumentDTO> aiKnowledgeDocumentDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'embeddKnowledgeDocuments'");
-    }
-
-    @Override
-    public Response findAIContextBySearchCriteria(
-            @Valid @NotNull AIContextSearchCriteriaDTO aiContextSearchCriteriaDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'findAIContextBySearchCriteria'");
+        dao.deleteQueryById(aiKnowledgebaseId);
+        return Response.noContent().build();
     }
 
     @Override
     public Response findAIKnowlegeBaseBySearchCriteria(
             @Valid @NotNull AIKnowledgeBaseSearchCriteriaDTO aiKnowledgeBaseSearchCriteriaDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'findAIKnowlegeBaseBySearchCriteria'");
+        var criteria = mapper.map(aiKnowledgeBaseSearchCriteriaDTO);
+        var result = dao.findAIKnowledgeBasesByCriteria(criteria);
+        return Response.ok(mapper.mapPage(result)).build();
     }
 
     @Override
@@ -197,74 +106,17 @@ public class KnowlegeBaseRestController implements AiKnowledgeBaseInternalApi {
     }
 
     @Override
-    public Response updateAIContext(String aiContextId, UpdateAIContextRequestDTO aiContextDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'updateAIContext'");
-    }
-
-    @Override
     public Response updateAIKnowledgeBase(String aiKnowledgebaseId,
             UpdateAIKnowledgeBaseRequestDTO aiKnowledgeBaseDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'updateAIKnowledgeBase'");
-    }
+        //check if exists
+        var kb = dao.findById(aiKnowledgebaseId);
+        if (kb == null) {
+            return Response.status(Response.Status.NOT_FOUND).build();
+        }
 
-    @Override
-    public Response updateKnowledgeDb(String aiKnowledgeDatabaseId,
-            UpdateAIKnowledgeDatabaseRequestDTO aiKnowledgeDatabaseDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'updateKnowledgeDb'");
-    }
-
-    @Override
-    public Response updateKnowledgeDocument(String aiKnowledgeDocumentId,
-            UpdateAIKnowledgeDocumentRequestDTO aiKnowledgeDocumentDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'updateKnowledgeDocument'");
-    }
-
-    @Override
-    public Response updateKnowledgeUrl(String aiKnowledgeUrlId, UpdateAIKnowledgeUrlRequestDTO aiKnowledgeUrlDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'updateKnowledgeUrl'");
-    }
-
-    @Override
-    public Response updateKnowledgeVectorDb(String aiKnowledgeVdbId,
-            UpdateAIKnowledgeVectorDbRequestDTO aiKnowledgeVectorDbDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'updateKnowledgeVectorDb'");
-    }
-
-    @Override
-    public Response uploadKnowledgeDocuments(String aiContextId,
-            @Valid @NotNull UploadKnowledgeDocumentsRequestDTO uploadKnowledgeDocumentsRequestDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'uploadKnowledgeDocuments'");
-    }
-
-    @Override
-    public Response getAIKnowledgeUrl(String id) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'getAIKnowledgeUrl'");
-    }
-
-    @Override
-    public Response getAIKnowledgeDatabase(String id) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'getAIKnowledgeDatabase'");
-    }
-
-    @Override
-    public Response getAIKnowledgeDocument(String id) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'getAIKnowledgeDocument'");
-    }
-
-    @Override
-    public Response getAIKnowledgeVectorDb(String id) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'getAIKnowledgeVectorDb'");
+        mapper.updateAIKnowledgeBase(aiKnowledgeBaseDTO, kb);
+        dao.update(kb);
+        return Response.noContent().build();
     }
 
     @Override
